fix: font and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+  font-family: 'Roboto';
 }
 * {
   margin: 0;
